--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,38 @@
             <version>3.3.1.Final</version>
         </dependency>
 
-    </dependencies>
 
+        <!--Spring Security-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>3.2.7.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>3.2.7.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>3.2.7.RELEASE</version>
+        </dependency>
+        <!--&lt;!&ndash;Provides Spring Security’s JSP tag implementations.&ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.security</groupId>-->
+            <!--<artifactId>spring-security-taglibs</artifactId>-->
+            <!--<version>3.2.4.RELEASE</version>-->
+            <!--<type>jar</type>-->
+            <!--<scope>compile</scope>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash;@RolesAllowed&ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>javax.annotation</groupId>-->
+            <!--<artifactId>jsr250-api</artifactId>-->
+            <!--<version>1.0</version>-->
+        <!--</dependency>-->
+    </dependencies>
 </project>
